--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.4",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
